--- a/Quiz_App/app/src/main/res/values/strings.xml
+++ b/Quiz_App/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">quizApp</string>
     <string name="Appname">Quiz App!</string>
+    <string name="welcome">Welcome</string>
+    <string name="please_enter_your_name">Please enter your name.</string>
+    <string name="eg_john">eg. John</string>
+    <string name="Start">Start</string>
 </resources>
