--- a/Quiz_App/app/src/main/res/values/strings.xml
+++ b/Quiz_App/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="please_enter_your_name">Please enter your name.</string>
     <string name="eg_john">eg. John</string>
     <string name="Start">Start</string>
+    <string name="SUBMIT">SUBMIT</string>
 </resources>
